examples/errors/array_init_expresison/main.lc

function main() {
    let a = [
        1,2, "3",
    ];
}
